[package]
name = "amon"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "4"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
dirs-next = "2.0.0"
tracing                  = "0.1.36"
tracing-subscriber       = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}
serde_json = "1.0.94"
keyring = "2.0.1"
tiny-bip39 = "1.0.0"


[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"
